Fix navbar menu-toggle icon misalignment

--- a/src/scss/_icon-fix.scss
+++ b/src/scss/_icon-fix.scss
@@ -6,6 +6,10 @@
 .icon {
   i {
     height: inherit;
+
+    &.has-height-auto {
+      height: auto;
+    }
   }
 }
 
